--- a/ml_lab/iris_analysis.ipynb
+++ b/ml_lab/iris_analysis.ipynb
@@ -3,7 +3,13 @@
   {
    "cell_type": "markdown",
    "id": "08d00941-dd7a-4fb8-a702-b222e1320b5c",
-   "metadata": {},
+   "metadata": {
+    "editable": true,
+    "slideshow": {
+     "slide_type": ""
+    },
+    "tags": []
+   },
    "source": [
     "### task\n",
     "\n"
@@ -12,9 +18,7 @@
   {
    "cell_type": "markdown",
    "id": "2525ba78-f023-4528-b751-66e401727e88",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### load read save, visualize, preprocess dirty_iris dataset"
    ]
@@ -196,9 +200,7 @@
   {
    "cell_type": "markdown",
    "id": "79092626-241e-48c4-b751-dcb3bea32385",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### showing first 5 rows and column names and renaming the dataset columns dirty_iris dataset "
    ]
@@ -397,9 +399,7 @@
   {
    "cell_type": "markdown",
    "id": "25744b07-7f8a-4554-aa08-2a0e78822d05",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Datavisualization using scatter plot from matplotlib"
    ]
@@ -470,11 +470,22 @@
   {
    "cell_type": "markdown",
    "id": "80d57d26-5554-46eb-b96f-0b031574aa7a",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Data-preprocessing"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b2a4b6ed-3939-4f62-8eb6-b215a1bf6164",
+   "metadata": {},
+   "source": [
+    "- data imputation\n",
+    "- data normalization\n",
+    "- data encoding\n",
+    "- data discretization\n",
+    "- data standardization\n",
+    "  "
    ]
   },
   {
@@ -1200,9 +1211,7 @@
   {
    "cell_type": "markdown",
    "id": "3ec7120e-edaf-4365-ac73-d936034fc346",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "#### Keyboard shortcuts:\n"
    ]
