--- a/ml_lab/day1_iris_analysis.ipynb
+++ b/ml_lab/day1_iris_analysis.ipynb
@@ -589,7 +589,7 @@
    ],
    "source": [
     "plt.scatter(x=df[\"PetalLengthCm\"], y=df[\"PetalWidthCm\"],alpha=0.5)\n",
-    "plt.title('petal length vs petal vidth')\n",
+    "plt.title('petal length vs petal width')\n",
     "plt.xlabel('petal length')\n",
     "plt.ylabel('petal width ')\n",
     "plt.axhline(0.75)\n",
