--- a/ml_lab/day2_knn_iris.ipynb
+++ b/ml_lab/day2_knn_iris.ipynb
@@ -1272,7 +1272,13 @@
     "- f1 score\n",
     "- visualiation\n",
     "- decision boundary\n",
-    "- without sklearn\n"
+    "- without sklearn\n",
+    "- data imputation\n",
+    "- data normalization\n",
+    "- data encoding\n",
+    "- data discretization\n",
+    "- data standardization\n",
+    "  \n"
    ]
   }
  ],
