--- a/ml_lab/day2_knn_iris.ipynb
+++ b/ml_lab/day2_knn_iris.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "02b3740b-16e8-4557-9e02-684729530a85",
    "metadata": {
     "editable": true,
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "7370353d-ab84-4f8c-b619-2ad827b70ce6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 3,
    "id": "e734ee86-7b3a-4f31-9d4c-2ae32f4d6e5f",
    "metadata": {},
    "outputs": [
@@ -128,7 +128,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 22,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -823,7 +823,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "id": "67a62a21-75c1-47b2-9330-4e8e78bd4c13",
    "metadata": {},
    "outputs": [
@@ -855,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 5,
    "id": "16119c08-cb7d-4c02-acc7-8061782ea32f",
    "metadata": {},
    "outputs": [],
@@ -866,7 +866,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 6,
    "id": "01270f74-f566-4fdb-8a52-98341c1e871d",
    "metadata": {},
    "outputs": [
@@ -936,7 +936,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 7,
    "id": "7cd16389-bdaa-4ba7-a177-51b12d0a6545",
    "metadata": {},
    "outputs": [],
@@ -946,7 +946,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 8,
    "id": "95489d5c-be6b-4c57-ad98-850c122a6009",
    "metadata": {},
    "outputs": [
@@ -962,7 +962,7 @@
        "       2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2, 2])"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -973,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 9,
    "id": "742703be-d0f7-46c0-acd0-c91f71ef3d17",
    "metadata": {},
    "outputs": [
@@ -998,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 10,
    "id": "a80f135e-14b7-4752-871a-4213bbcbe845",
    "metadata": {},
    "outputs": [
@@ -1129,7 +1129,7 @@
        "51    52            6.4           3.2            4.5           1.5"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1163,7 +1163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 11,
    "id": "297c4e18-90d1-40d9-9063-eb4cd39ff45f",
    "metadata": {},
    "outputs": [
@@ -1171,7 +1171,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The accuracy of the KNN is 0.9777777777777777\n"
+      "The accuracy of the KNN is 1.0\n"
      ]
     }
    ],
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 17,
    "id": "dcf2037e-216c-4d17-93ea-956addb4c2cd",
    "metadata": {},
    "outputs": [],
@@ -1220,7 +1220,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "id": "78a1c17b-1baa-4b24-92c5-b98d426f6df5",
    "metadata": {},
    "outputs": [
@@ -1238,7 +1238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "c58755e4-34af-47ac-b9ea-c07be2cb1b23",
    "metadata": {},
    "outputs": [
@@ -1248,13 +1248,13 @@
      "text": [
       "              precision    recall  f1-score   support\n",
       "\n",
-      "           0       0.93      1.00      0.97        14\n",
-      "           1       1.00      0.94      0.97        17\n",
+      "           0       1.00      1.00      1.00        14\n",
+      "           1       1.00      1.00      1.00        17\n",
       "           2       1.00      1.00      1.00        14\n",
       "\n",
-      "    accuracy                           0.98        45\n",
-      "   macro avg       0.98      0.98      0.98        45\n",
-      "weighted avg       0.98      0.98      0.98        45\n",
+      "    accuracy                           1.00        45\n",
+      "   macro avg       1.00      1.00      1.00        45\n",
+      "weighted avg       1.00      1.00      1.00        45\n",
       "\n"
      ]
     }
@@ -1263,6 +1263,90 @@
     "from sklearn.metrics import classification_report\n",
     "print(classification_report(pred_y,test_y))"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "3cf0cae3-fb5e-4c35-9447-5d9e2efbab29",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.7424242424242424"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import f1_score\n",
+    "f1_score(test_y,pred_y, average='macro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "80662bc5-6d77-42cd-a9bf-08721b9585ce",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.9777777777777777"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "f1_score(test_y,pred_y, average='micro')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "960292ca-c51d-4bf5-b8de-21dd4a140050",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[14,  0,  0,  0],\n",
+       "       [ 0, 16,  0,  0],\n",
+       "       [ 0,  0, 14,  0],\n",
+       "       [ 0,  1,  0,  0]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "from sklearn.metrics import confusion_matrix\n",
+    "confusion_matrix(test_y,pred_y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "a00a6247-45e9-4aff-ba10-89a96ea15d3d",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9053f7ca-4206-4247-8d82-9c8481c1e9e6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -1280,6 +1364,14 @@
     "- data standardization\n",
     "  \n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d04706b-ee42-4307-8a10-aff006785b22",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
