lab work updated

--- a/ml_lab/day1_iris_analysis.ipynb
+++ b/ml_lab/day1_iris_analysis.ipynb
@@ -11,8 +11,24 @@
     "tags": []
    },
    "source": [
-    "### task\n",
+    "## Aim: To write the data preprocessing steps on Iris Dirty dataset\n",
+    "\n",
+    "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e5a4bfe7-9688-4327-98d0-bad11ce125f4",
+   "metadata": {},
+   "source": [
+    "## theory\n",
+    "we can do the following tasks on the data\n",
+    "- data imputation\n",
+    "- data normalization\n",
+    "- data encoding\n",
+    "- data discretization\n",
+    "- data standardization"
    ]
   },
   {
@@ -20,7 +36,8 @@
    "id": "2525ba78-f023-4528-b751-66e401727e88",
    "metadata": {},
    "source": [
-    "#### load read save, visualize, preprocess dirty_iris dataset"
+    "\n",
+    "## Code "
    ]
   },
   {
@@ -1473,6 +1490,45 @@
    "source": [
     "df.describe()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6c27886e-ec12-4da2-98a7-fca0c7ec0d1a",
+   "metadata": {},
+   "source": [
+    "## result\n",
+    "- iris dataset was cleaned\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b6c243b9-9d98-4ae0-9707-7143b53c54b3",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "id": "edee826b-60c3-47cb-825e-2abdd73fd451",
+   "metadata": {},
+   "source": [
+    "## learning outcome\n",
+    "- I learned how to clean the iris dataset\n",
+    "- data imputation\n",
+    "- data normalization\n",
+    "- data encoding\n",
+    "- data discretization\n",
+    "- data standardization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "cff6d5d3-491f-4087-98ed-34c7652fc4fb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
