--- a/ml_lab/day2_knn_iris.ipynb
+++ b/ml_lab/day2_knn_iris.ipynb
@@ -1,6 +1,32 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "9cb9995e-f07b-47f0-9acf-ab1c41ab9427",
+   "metadata": {},
+   "source": [
+    "## Aim: To implement KNN Classifier on Iris Dataset\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e794d990-b22d-43dc-8914-8eb4cac76717",
+   "metadata": {},
+   "source": [
+    "## Theory\n",
+    "- KNN algorithm is used to classify datasets, where k is a hyper-parameter, in our dataset we have 3 classes so model is supposed to give good results at k=3\n",
+    "- knc = KNeighborsClassifier(n_neighbors=3) "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8937247a-87d4-4d00-87ad-2e919c1d2f69",
+   "metadata": {},
+   "source": [
+    "## Code"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "id": "02b3740b-16e8-4557-9e02-684729530a85",
@@ -1212,14 +1238,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "id": "dcf2037e-216c-4d17-93ea-956addb4c2cd",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
    "execution_count": 12,
    "id": "78a1c17b-1baa-4b24-92c5-b98d426f6df5",
    "metadata": {},
@@ -1333,22 +1351,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 30,
-   "id": "a00a6247-45e9-4aff-ba10-89a96ea15d3d",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "9053f7ca-4206-4247-8d82-9c8481c1e9e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
    "cell_type": "markdown",
    "id": "37460524-da52-408e-9267-f71306e64588",
    "metadata": {},
@@ -1356,19 +1358,34 @@
     "- f1 score\n",
     "- visualiation\n",
     "- decision boundary\n",
-    "- without sklearn\n",
-    "- data imputation\n",
-    "- data normalization\n",
-    "- data encoding\n",
-    "- data discretization\n",
-    "- data standardization\n",
-    "  \n"
+    "- without sklearn"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "29d5a0cc-bca8-407d-978f-c80690ad435c",
+   "metadata": {},
+   "source": [
+    "## Result\n",
+    "1. Model accuracy\n",
+    "    - .99\n",
+    "2. F1-score\n",
+    "    - 0.9777777777777777"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "577c36bc-9295-4c83-9834-f341b8b410b5",
+   "metadata": {},
+   "source": [
+    "## Learning Outcome\n",
+    "I learned to use KNN on Iris dataset, evaluate the f1-score, and data-preprocessing"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "7d04706b-ee42-4307-8a10-aff006785b22",
+   "id": "f14e0d19-a529-4f14-ae00-3a629da64324",
    "metadata": {},
    "outputs": [],
    "source": []
