--- a/ml_lab/day3_bfs_dfs.ipynb
+++ b/ml_lab/day3_bfs_dfs.ipynb
@@ -4,8 +4,27 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Depth-First Search and Breadth-First Search \n",
-    "\n"
+    "## Aim: To implement BFS,DFS and Best First Search\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Theory\n",
+    "To search for a solution a agent can use different searches\n",
+    "1. Informed search: have a idea of goal\n",
+    "   - best first search\n",
+    "3. Uninformed search: no idea of goal\n",
+    "   - breadth first search\n",
+    "   - depth first search"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Code"
    ]
   },
   {
@@ -40,7 +59,7 @@
    ],
    "source": [
     "def dfs(graph, start):\n",
-    "    visited, stack = set(), [start] # ❌ Because set() is not ordered, the order of node visits is lost.\n",
+    "    visited, stack = set(), [start] \n",
     "    while stack:\n",
     "        vertex = stack.pop()\n",
     "        if vertex not in visited:\n",
@@ -48,7 +67,7 @@
     "            stack.extend(graph[vertex] - visited)\n",
     "    return visited\n",
     "\n",
-    "dfs(graph, 'A') # {'E', 'D', 'F', 'A', 'C', 'B'} ❌ Not code result, or correct for algorithm\n"
+    "dfs(graph, 'A')\n"
    ]
   },
   {
@@ -68,18 +87,18 @@
     }
    ],
    "source": [
-    "# ✅ Fixed?\n",
+    "\n",
     "\n",
     "def dfs(graph, start):\n",
-    "    visited, stack = [], [start] # ✅ Use list\n",
+    "    visited, stack = [], [start] \n",
     "    while stack:\n",
     "        vertex = stack.pop()\n",
     "        if vertex not in visited:\n",
     "            visited.append(vertex)\n",
-    "            stack.extend(graph[vertex] - set(visited)) # ✅ Convert to set()\n",
+    "            stack.extend(graph[vertex] - set(visited))\n",
     "    return visited\n",
     "\n",
-    "dfs(graph, 'A') # ['A', 'B', 'E', 'F', 'C', 'D'] # Correct output"
+    "dfs(graph, 'A') "
    ]
   },
   {
@@ -109,13 +128,13 @@
    "source": [
     "def dfs(graph, start, visited=None):\n",
     "    if visited is None:\n",
-    "        visited = set() # ❌ Because set() is not ordered, the order of node visits is lost.\n",
+    "        visited = set().\n",
     "    visited.add(start)\n",
     "    for next in graph[start] - visited:\n",
     "        dfs(graph, next, visited)\n",
     "    return visited\n",
     "\n",
-    "dfs(graph, 'C') # {'E', 'D', 'F', 'A', 'C', 'B'} ❌ Does not match output, and output incorrect\n"
+    "dfs(graph, 'C')\n"
    ]
   },
   {
@@ -135,15 +154,15 @@
     }
    ],
    "source": [
-    "# ✅ Fixed?\n",
     "\n",
-    "def dfs(graph, start, visited=[]): # ✅ Use list\n",
+    "\n",
+    "def dfs(graph, start, visited=[]): \n",
     "    visited.append(start)\n",
-    "    for next in graph[start] - set(visited): # ✅ Convert to set()\n",
+    "    for next in graph[start] - set(visited): \n",
     "        dfs(graph, next, visited)\n",
     "    return visited\n",
     "\n",
-    "dfs(graph, 'C') # ['C', 'F', 'E', 'B', 'A', 'D', 'A']\n"
+    "dfs(graph, 'C') \n"
    ]
   },
   {
@@ -183,7 +202,7 @@
     "            else:\n",
     "                stack.append((next, path + [next]))\n",
     "\n",
-    "list(dfs_paths(graph, 'A', 'F')) # [['A', 'C', 'F'], ['A', 'B', 'E', 'F']] ⚠️ Correct, but order is different\n"
+    "list(dfs_paths(graph, 'A', 'F')) \n"
    ]
   },
   {
@@ -218,7 +237,7 @@
     "    for next in graph[start] - set(path):\n",
     "        yield from dfs_paths(graph, next, goal, path + [next])\n",
     "\n",
-    "list(dfs_paths(graph, 'C', 'F')) # [['C', 'F'], ['C', 'A', 'B', 'E', 'F']]\n"
+    "list(dfs_paths(graph, 'C', 'F')) \n"
    ]
   },
   {
@@ -260,7 +279,7 @@
     "            queue.extend(graph[vertex] - visited)\n",
     "    return visited\n",
     "\n",
-    "bfs(graph, 'A') # {'B', 'C', 'A', 'F', 'D', 'E'} ❌❌❌"
+    "bfs(graph, 'A')"
    ]
   },
   {
@@ -280,18 +299,17 @@
     }
    ],
    "source": [
-    "# ✅ Fixed?\n",
     "\n",
     "def bfs(graph, start):\n",
-    "    visited, queue = [], [start] # ✅ Use list\n",
+    "    visited, queue = [], [start] \n",
     "    while queue:\n",
     "        vertex = queue.pop(0)\n",
     "        if vertex not in visited:\n",
     "            visited.append(vertex)\n",
-    "            queue.extend(graph[vertex] - set(visited)) # ✅ Convert list to set()\n",
+    "            queue.extend(graph[vertex] - set(visited)) \n",
     "    return visited\n",
     "\n",
-    "bfs(graph, 'A') # ['A', 'C', 'B', 'F', 'D', 'E'] # ✅"
+    "bfs(graph, 'A') "
    ]
   },
   {
@@ -331,7 +349,7 @@
     "            else:\n",
     "                queue.append((next, path + [next]))\n",
     "\n",
-    "list(bfs_paths(graph, 'A', 'F')) # [['A', 'C', 'F'], ['A', 'B', 'E', 'F']]\n"
+    "list(bfs_paths(graph, 'A', 'F')) \n"
    ]
   },
   {
@@ -365,7 +383,7 @@
     "    except StopIteration:\n",
     "        return None\n",
     "\n",
-    "shortest_path(graph, 'A', 'F') # ['A', 'C', 'F']\n"
+    "shortest_path(graph, 'A', 'F')"
    ]
   },
   {
@@ -373,6 +391,100 @@
    "metadata": {},
    "source": [
     "## Best First Search algorithm"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Path: A -> C -> D\n",
+      "Total cost: 5\n"
+     ]
+    }
+   ],
+   "source": [
+    "import heapq\n",
+    "\n",
+    "class Graph:\n",
+    "    def __init__(self):\n",
+    "        self.graph = {}\n",
+    "        self.heuristics = {}\n",
+    "\n",
+    "    def add_edge(self, node, neighbor, cost):\n",
+    "        if node not in self.graph:\n",
+    "            self.graph[node] = []\n",
+    "        self.graph[node].append((neighbor, cost))\n",
+    "\n",
+    "    def set_heuristic(self, node, heuristic):\n",
+    "        self.heuristics[node] = heuristic\n",
+    "\n",
+    "def best_first_search(graph, start, goal):\n",
+    "    frontier = [(graph.heuristics[start], start, [start], 0)]  # (heuristic, node, path, cost)\n",
+    "    visited = set()\n",
+    "\n",
+    "    while frontier:\n",
+    "        _, current, path, cost = heapq.heappop(frontier)\n",
+    "\n",
+    "        if current == goal:\n",
+    "            return path, cost\n",
+    "\n",
+    "        if current not in visited:\n",
+    "            visited.add(current)\n",
+    "            for neighbor, edge_cost in graph.graph.get(current, []):\n",
+    "                if neighbor not in visited:\n",
+    "                    new_path = path + [neighbor]\n",
+    "                    new_cost = cost + edge_cost\n",
+    "                    heapq.heappush(frontier, (graph.heuristics[neighbor], neighbor, new_path, new_cost))\n",
+    "\n",
+    "    return [], float('inf')\n",
+    "\n",
+    "# Small example\n",
+    "g = Graph()\n",
+    "g.add_edge('A', 'B', 3)\n",
+    "g.add_edge('A', 'C', 1)\n",
+    "g.add_edge('C', 'D', 4)\n",
+    "g.set_heuristic('A', 5)\n",
+    "g.set_heuristic('B', 2)\n",
+    "g.set_heuristic('C', 3)\n",
+    "g.set_heuristic('D', 0)\n",
+    "\n",
+    "path, cost = best_first_search(g, 'A', 'D')\n",
+    "print(f\"Path: {' -> '.join(path) if path else 'No path found'}\")\n",
+    "print(f\"Total cost: {cost}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Result\n",
+    "1. DFS\n",
+    "{'A', 'B', 'C', 'D', 'E', 'F'}\n",
+    "2. BFS\n",
+    "{'A', 'B', 'C', 'D', 'E', 'F'}   \n",
+    "3. Best First Search\n",
+    "Path: A -> C -> D\n",
+    "Total cost: 5"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Learning Outcome\n",
+    "#### I learned to implement DFS, BFS, and best first search algorithms"
    ]
   },
   {
