--- a/ml_lab/day5_logistic_regression.ipynb
+++ b/ml_lab/day5_logistic_regression.ipynb
@@ -47,18 +47,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "018242ad-cdae-47bb-a2f3-40bf2cda85de",
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.datasets import load_iris\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "X, y = load_iris(return_X_y=True)\n",
-    "clf = LogisticRegression(random_state=0).fit(X, y)\n",
-    "clf.predict(X[:2, :])\n",
-    "clf.predict_proba(X[:2, :])\n",
-    "clf.score(X, y)"
+    "from sklearn.linear_model import LogisticRegression\n"
    ]
   },
   {
