--- a/ml_lab/day4_house_price_prediction.ipynb
+++ b/ml_lab/day4_house_price_prediction.ipynb
@@ -29,6 +29,23 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "id": "fb81138a-7026-4868-9955-62590c5c5632",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "# import seaborn as sns\n",
+    "from scipy import stats\n",
+    "%matplotlib inline\n",
+    "from sklearn.metrics import accuracy_score\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "id": "a08df68c-4334-45ff-bb6a-3af771c395fe",
    "metadata": {},
@@ -44,17 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "e0f3e61b-981d-4042-827d-e3367201bc31",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df.plot.scatter('rm', 'medv')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 6,
    "id": "d9cfaf37-2bdc-4e59-9ca2-367ab4529f0b",
    "metadata": {},
    "outputs": [
@@ -365,24 +372,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
-   "id": "372bc2e5-f4bb-44c4-adc1-51ed22d02b66",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## import libraries\n",
-    "import pandas as pd\n",
-    "import numpy as np\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "78ab5fe1-58f5-47f9-9595-848a0fcf839f",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df2=pd.read_csv('houstan.csv',low_memory=False)"
+    "df2=pd.read_csv('data/houstan.csv',low_memory=False)"
    ]
   },
   {
@@ -615,29 +610,6 @@
    "source": [
     "df2.columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "id": "5149b579-0d36-4961-99ea-953d04c529d7",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "# import seaborn as sns\n",
-    "from scipy import stats\n",
-    "%matplotlib inline\n",
-    "\n",
-    "# data_url = \"http://lib.stat.cmu.edu/datasets/boston\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "d8a17798-e5ef-404e-bab8-b4ace7c7ef8f",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   },
   {
    "cell_type": "code",
@@ -1194,16 +1166,16 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "f5822f34-e09c-490a-8dd0-636fbaf50eba",
+   "cell_type": "markdown",
+   "id": "c1675e65-017c-4970-97ae-58d7fa2a4fa5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Linear regression"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 81,
+   "execution_count": 2,
    "id": "91890a54-ca0a-4160-8223-874f96b9aaff",
    "metadata": {},
    "outputs": [],
@@ -1838,6 +1810,24 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "id": "3d565196-892c-4b18-9d9b-6dca7af2a0ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "accuracy_score(y_true, y_pred)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7aa6c21e-19f6-4ca1-88d9-4aac8e16de58",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 96,
    "id": "66ba4348-347a-4875-97c6-ec4ccc232c5f",
    "metadata": {},
@@ -1938,6 +1928,7 @@
    "id": "ade38833-254e-49b3-bb10-08e59b906eb5",
    "metadata": {},
    "source": [
+    "## References:\n",
     "\n",
     "- state space tree\n",
     "-  optimization search technique\n",
@@ -1951,6 +1942,14 @@
     "\n",
     "https://www.kaggle.com/datasets/datadetective08/houston-housing-market-2024"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c770af70-10b9-487a-be0a-82fb52447acc",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
