--- a/ml_lab/day6_decision_tree.ipynb
+++ b/ml_lab/day6_decision_tree.ipynb
@@ -31,7 +31,8 @@
    "id": "7824d618-e589-4a04-97e6-f1a08059a3a2",
    "metadata": {},
    "source": [
-    "## Code\n"
+    "## Code\n",
+    "so and i am in the \n"
    ]
   },
   {
