--- a/ml_lab/day6_decision_tree.ipynb
+++ b/ml_lab/day6_decision_tree.ipynb
@@ -68,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 1,
    "id": "a5921ea5-0e30-43b5-88d9-383ee08942d0",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "id": "599f38ff-11b2-4566-a94d-45c06ecc06e6",
    "metadata": {},
    "outputs": [
@@ -87,20 +87,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting scikit-learn\n",
-      "  Downloading scikit_learn-1.7.2-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (11 kB)\n",
+      "Requirement already satisfied: scikit-learn in /home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages (1.7.2)\n",
       "Requirement already satisfied: numpy>=1.22.0 in /home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages (from scikit-learn) (2.1.0)\n",
       "Requirement already satisfied: scipy>=1.8.0 in /home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages (from scikit-learn) (1.14.1)\n",
-      "Collecting joblib>=1.2.0 (from scikit-learn)\n",
-      "  Downloading joblib-1.5.2-py3-none-any.whl.metadata (5.6 kB)\n",
-      "Collecting threadpoolctl>=3.1.0 (from scikit-learn)\n",
-      "  Downloading threadpoolctl-3.6.0-py3-none-any.whl.metadata (13 kB)\n",
-      "Downloading scikit_learn-1.7.2-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (9.5 MB)\n",
-      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m9.5/9.5 MB\u001b[0m \u001b[31m209.1 kB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0ma \u001b[36m0:00:02\u001b[0m\n",
-      "\u001b[?25hDownloading joblib-1.5.2-py3-none-any.whl (308 kB)\n",
-      "Downloading threadpoolctl-3.6.0-py3-none-any.whl (18 kB)\n",
-      "Installing collected packages: threadpoolctl, joblib, scikit-learn\n",
-      "Successfully installed joblib-1.5.2 scikit-learn-1.7.2 threadpoolctl-3.6.0\n"
+      "Requirement already satisfied: joblib>=1.2.0 in /home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages (from scikit-learn) (1.5.2)\n",
+      "Requirement already satisfied: threadpoolctl>=3.1.0 in /home/mimo/.config/jupyterlab-desktop/jlab_server/lib/python3.12/site-packages (from scikit-learn) (3.6.0)\n"
      ]
     }
    ],
@@ -111,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "6b9168e9-b610-495f-847f-e120c374e33c",
    "metadata": {},
    "outputs": [],
@@ -133,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "8aa335a7-3db1-4177-ba3f-94c0d8647b47",
    "metadata": {},
    "outputs": [],
@@ -144,11 +135,118 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "6925cc02-a539-49ba-974f-982ffe667551",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>N</th>\n",
+       "      <th>P</th>\n",
+       "      <th>K</th>\n",
+       "      <th>temperature</th>\n",
+       "      <th>humidity</th>\n",
+       "      <th>ph</th>\n",
+       "      <th>rainfall</th>\n",
+       "      <th>label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>90.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>43.0</td>\n",
+       "      <td>20.879744</td>\n",
+       "      <td>82.002744</td>\n",
+       "      <td>6.502985</td>\n",
+       "      <td>202.935536</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>85.0</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>41.0</td>\n",
+       "      <td>21.770462</td>\n",
+       "      <td>80.319644</td>\n",
+       "      <td>7.038096</td>\n",
+       "      <td>226.655537</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>60.0</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>44.0</td>\n",
+       "      <td>23.004459</td>\n",
+       "      <td>82.320763</td>\n",
+       "      <td>7.840207</td>\n",
+       "      <td>263.964248</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>74.0</td>\n",
+       "      <td>35.0</td>\n",
+       "      <td>40.0</td>\n",
+       "      <td>26.491096</td>\n",
+       "      <td>80.158363</td>\n",
+       "      <td>6.980401</td>\n",
+       "      <td>242.864034</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>78.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>42.0</td>\n",
+       "      <td>20.130175</td>\n",
+       "      <td>81.604873</td>\n",
+       "      <td>7.628473</td>\n",
+       "      <td>262.717340</td>\n",
+       "      <td>rice</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      N     P     K  temperature   humidity        ph    rainfall label\n",
+       "0  90.0  42.0  43.0    20.879744  82.002744  6.502985  202.935536  rice\n",
+       "1  85.0  58.0  41.0    21.770462  80.319644  7.038096  226.655537  rice\n",
+       "2  60.0  55.0  44.0    23.004459  82.320763  7.840207  263.964248  rice\n",
+       "3  74.0  35.0  40.0    26.491096  80.158363  6.980401  242.864034  rice\n",
+       "4  78.0  42.0  42.0    20.130175  81.604873  7.628473  262.717340  rice"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head()"
+   ]
   },
   {
    "cell_type": "code",
